fix form layout on mobile device

--- a/src/app/payment/payment.component.scss
+++ b/src/app/payment/payment.component.scss
@@ -109,7 +109,6 @@ hr {
 
 .btn-confirm {
   background-color: #13b8aa;
-  display: block;
   width: 100%;
   padding-top: 10px;
   padding-bottom: 10px;
